--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
   "name": "location-matters-2021",
   "version": "0.1.0",
+  "typings": "main.d.ts",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/d3": "^6.3.0",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "d3-axis": "^2.1.0",
+    "d3-scale": "^3.2.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
