--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "npm run build-data --watch && react-scripts start",
+    "build": "npm run build-data && react-scripts build",
     "build-data": "node src/formatData.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
