--- a/package.json
+++ b/package.json
@@ -55,8 +55,10 @@
     "eslint": "^7.23.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
+    "gray-matter": "^4.0.2",
     "prettier": "^2.2.1",
     "puppeteer": "^8.0.0",
+    "showdown": "^1.9.1",
     "xlsx": "^0.16.9"
   }
 }
